[metadata]
name = allak
description = A CLI tool to produce an IPv6 address with the host portion being a modified EUI-64
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitrii Litovchenko
url = https://github.com/ttl256/allak
license = MIT
license_file = LICENSE
version = 1.0.1
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
	ipv6
	eui64

[options]
packages = find:
package_dir =
    =src
install_requires =
    click>=8
python_requires = >=3.11
zip_safe = no

[options.packages.find]
where = src
exclude =

[options.entry_points]
console_scripts = 
	allak-cli = allak.cli.main:main

[options.extras_require]
testing =
	black>=23
	flake8>=7
	mypy>=1.8
	pytest>=7.4
	pytest-cov>=4.1
	tox>=4

[options.package_data]
allak = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203
